deployment/templates/grill-stats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grill-stats
  namespace: ${NAMESPACE}
  labels:
    app: grill-stats
    environment: ${ENVIRONMENT}
spec:
  selector:
    app: grill-stats
  ports:
  - port: 5000
    targetPort: 5000
    name: http
  type: ClusterIP
