deployment/templates/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: ${NAMESPACE}
  labels:
    app: influxdb
    environment: ${ENVIRONMENT}
spec:
  selector:
    app: influxdb
  ports:
  - port: 8086
    targetPort: 8086
    name: influxdb
  type: ClusterIP
